[gd_scene load_steps=10 format=3 uid="uid://bdpk188yk5g7d"]

[ext_resource type="Texture2D" uid="uid://dwfsvp5xknpgy" path="res://sprites/deer.png" id="1_686td"]
[ext_resource type="Script" path="res://entities/deer.gd" id="1_b2tl8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hm7e"]
size = Vector2(112, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pll4x"]
size = Vector2(1152, 1024)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d3uu5"]
size = Vector2(128, 128)

[sub_resource type="Animation" id="Animation_g1iyf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Deer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_liiww"]
resource_name = "stand_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Deer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_baetv"]
resource_name = "stand_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Deer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jut60"]
_data = {
"RESET": SubResource("Animation_g1iyf"),
"stand_down": SubResource("Animation_liiww"),
"stand_up": SubResource("Animation_baetv")
}

[node name="deer" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_b2tl8")

[node name="Deer" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -56)
scale = Vector2(8, 8)
texture = ExtResource("1_686td")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_5hm7e")

[node name="vision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="vision"]
shape = SubResource("RectangleShape2D_pll4x")

[node name="projectile_collision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="projectile_collision"]
shape = SubResource("RectangleShape2D_d3uu5")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -64.0
offset_top = -112.0
offset_right = 64.0
offset_bottom = -85.0

[node name="charge_cooldown" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jut60")
}

[connection signal="body_entered" from="vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="vision" to="." method="_on_vision_body_exited"]
[connection signal="area_entered" from="projectile_collision" to="." method="_on_projectile_collision_area_entered"]
[connection signal="timeout" from="charge_cooldown" to="." method="_on_charge_cooldown_timeout"]
